--- a/Vanilla CNN .ipynb
+++ b/Vanilla CNN .ipynb
@@ -5,7 +5,7 @@
    "id": "54ff2c8e-ee4e-4f4a-83f6-9f2885223af6",
    "metadata": {},
    "source": [
-    "This is the implementation of real-vs-ai-generated images detection on CIFAKE dataset using vanilla CNN "
+    "This is the implementation of real-vs-ai-generated images detection using vanilla CNN "
    ]
   },
   {
