vit model modified

--- a/ViT model.ipynb
+++ b/ViT model.ipynb
@@ -21,74 +21,24 @@
    },
    "outputs": [],
    "source": [
-    "import gc\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import itertools\n",
-    "from collections import Counter\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import (\n",
-    "    accuracy_score,\n",
-    "    roc_auc_score,\n",
-    "    confusion_matrix,\n",
-    "    classification_report,\n",
-    "    f1_score\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix, classification_report\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "import accelerate\n",
-    "import evaluate\n",
-    "from datasets import Dataset, Image, ClassLabel\n",
-    "from transformers import (\n",
-    "    TrainingArguments,\n",
-    "    Trainer,\n",
-    "    ViTImageProcessor,\n",
-    "    ViTForImageClassification,\n",
-    "    DefaultDataCollator\n",
-    ")\n",
+    "from datasets import Dataset, ClassLabel, Image\n",
+    "from transformers import TrainingArguments, Trainer, ViTImageProcessor, ViTForImageClassification, DefaultDataCollator\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision.transforms import (\n",
-    "    CenterCrop,\n",
-    "    Compose,\n",
-    "    Normalize,\n",
-    "    RandomRotation,\n",
-    "    RandomResizedCrop,\n",
-    "    RandomHorizontalFlip,\n",
-    "    RandomAdjustSharpness,\n",
-    "    Resize,\n",
-    "    ToTensor\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-17T16:08:25.026775Z",
-     "iopub.status.busy": "2024-04-17T16:08:25.025549Z",
-     "iopub.status.idle": "2024-04-17T16:08:25.030814Z",
-     "shell.execute_reply": "2024-04-17T16:08:25.029930Z",
-     "shell.execute_reply.started": "2024-04-17T16:08:25.026739Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "from torchvision.transforms import Compose, Normalize, RandomRotation, RandomResizedCrop, RandomHorizontalFlip, RandomAdjustSharpness, Resize, ToTensor\n",
+    "import evaluate\n",
     "from PIL import ImageFile\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
-    "import os"
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import gc\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -114,18 +64,17 @@
     }
    ],
    "source": [
-    "image_dict = {}\n",
-    "file_names = []\n",
-    "labels = []\n",
+    "# Load image data\n",
+    "image_files = []\n",
+    "image_labels = []\n",
     "\n",
-    "# load dataset\n",
-    "for file in sorted((Path('dataset/cifake/').glob('*/*/*.*'))):\n",
-    "    label = str(file).split('/')[-2]\n",
-    "    labels.append(label)\n",
-    "    file_names.append(str(file))\n",
+    "for file_path in sorted((Path('dataset/cifake/').glob('*/*/*.*'))):\n",
+    "    label = str(file_path).split('/')[-2]\n",
+    "    image_labels.append(label)\n",
+    "    image_files.append(str(file_path))\n",
     "\n",
-    "print(len(file_names), len(labels))\n",
-    "df = pd.DataFrame.from_dict({\"image\": file_names, \"label\": labels})\n",
+    "print(len(image_files), len(image_labels))\n",
+    "df = pd.DataFrame({\"image_path\": image_files, \"image_label\": image_labels})\n",
     "print(df.shape)"
    ]
   },
@@ -179,15 +128,12 @@
     }
    ],
    "source": [
-    "y = df[['label']]\n",
-    "df = df.drop(['label'], axis=1)\n",
-    "ros = RandomOverSampler(random_state=83)\n",
-    "df, y_resampled = ros.fit_resample(df, y)\n",
-    "del y\n",
-    "df['label'] = y_resampled\n",
-    "del y_resampled\n",
+    "label_data = df[['image_label']]\n",
+    "df = df.drop(['image_label'], axis=1)\n",
+    "oversampler = RandomOverSampler(random_state=83)\n",
+    "df, resampled_labels = oversampler.fit_resample(df, label_data)\n",
+    "df['image_label'] = resampled_labels\n",
     "gc.collect()\n",
-    "\n",
     "print(df.shape)"
    ]
   },
@@ -217,68 +163,8 @@
     }
    ],
    "source": [
-    "dataset = Dataset.from_pandas(df).cast_column(\"image\", Image())\n",
+    "image_dataset = Dataset.from_pandas(df).cast_column(\"image_path\", Image())\n",
     "dataset[0][\"image\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-17T16:08:30.772904Z",
-     "iopub.status.busy": "2024-04-17T16:08:30.772595Z",
-     "iopub.status.idle": "2024-04-17T16:08:30.778318Z",
-     "shell.execute_reply": "2024-04-17T16:08:30.777395Z",
-     "shell.execute_reply.started": "2024-04-17T16:08:30.772877Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FAKE', 'FAKE', 'FAKE', 'FAKE', 'FAKE']\n"
-     ]
-    }
-   ],
-   "source": [
-    "labels_subset = labels[:5]\n",
-    "print(labels_subset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-17T16:08:30.779685Z",
-     "iopub.status.busy": "2024-04-17T16:08:30.779389Z",
-     "iopub.status.idle": "2024-04-17T16:08:30.789125Z",
-     "shell.execute_reply": "2024-04-17T16:08:30.788276Z",
-     "shell.execute_reply.started": "2024-04-17T16:08:30.779658Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mapping of IDs to Labels: {0: 'REAL', 1: 'FAKE'} \n",
-      "\n",
-      "Mapping of Labels to IDs: {'REAL': 0, 'FAKE': 1}\n"
-     ]
-    }
-   ],
-   "source": [
-    "labels_list = ['REAL', 'FAKE']\n",
-    "label2id, id2label = dict(), dict()\n",
-    "for i, label in enumerate(labels_list):\n",
-    "    label2id[label] = i\n",
-    "    id2label[i] = label\n",
-    "\n",
-    "print(\"Mapping of IDs to Labels:\", id2label, '\\n')\n",
-    "print(\"Mapping of Labels to IDs:\", label2id)"
    ]
   },
   {
@@ -324,16 +210,19 @@
     }
    ],
    "source": [
+    "label_categories = ['REAL', 'FAKE']\n",
+    "classification_labels = ClassLabel(num_classes=len(label_categories), names=label_categories)\n",
     "ClassLabels = ClassLabel(num_classes=len(labels_list), names=labels_list)\n",
-    "def map_label2id(example):\n",
-    "    example['label'] = ClassLabels.str2int(example['label'])\n",
+    "\n",
+    "def map_labels(example):\n",
+    "    example['image_label'] = classification_labels.str2int(example['image_label'])\n",
     "    return example\n",
     "\n",
-    "dataset = dataset.map(map_label2id, batched=True)\n",
-    "dataset = dataset.cast_column('label', ClassLabels)\n",
-    "dataset = dataset.train_test_split(test_size=0.4, shuffle=True, stratify_by_column=\"label\")\n",
-    "train_data = dataset['train']\n",
-    "test_data = dataset['test']"
+    "image_dataset = image_dataset.map(map_labels, batched=True)\n",
+    "image_dataset = image_dataset.cast_column('image_label', classification_labels)\n",
+    "split_data = image_dataset.train_test_split(test_size=0.4, shuffle=True, stratify_by_column=\"image_label\")\n",
+    "training_dataset = split_data['train']\n",
+    "testing_dataset = split_data['test']"
    ]
   },
   {
@@ -372,38 +261,23 @@
     }
    ],
    "source": [
-    "model_str = \"models/ai_vs_real_image_detection\"\n",
-    "processor = ViTImageProcessor.from_pretrained(model_str)\n",
-    "image_mean, image_std = processor.image_mean, processor.image_std\n",
-    "size = processor.size[\"height\"]\n",
-    "print(\"Size: \", size)\n",
+    "model_directory = \"models/ai_vs_real_image_detection\"\n",
+    "image_processor = ViTImageProcessor.from_pretrained(model_directory)\n",
+    "mean_image, std_image = image_processor.image_mean, image_processor.image_std\n",
+    "image_size = image_processor.size[\"height\"]\n",
+    "print(\"Image Size: \", image_size)\n",
     "\n",
-    "normalize = Normalize(mean=image_mean, std=image_std)\n",
-    "_train_transforms = Compose(\n",
-    "    [\n",
-    "        Resize((size, size)),\n",
-    "        RandomRotation(90),\n",
-    "        RandomAdjustSharpness(2),         \n",
-    "        ToTensor(),\n",
-    "        normalize\n",
-    "    ]\n",
-    ")\n",
+    "training_transforms = Compose([Resize((image_size, image_size)), RandomRotation(90),\\\n",
+    "                               ToTensor(), Normalize(mean=mean_image, std=std_image)])\n",
+    "validation_transforms = Compose([Resize((image_size, image_size)), ToTensor(), Normalize(mean=mean_image, std=std_image)])\n",
     "\n",
-    "_val_transforms = Compose(\n",
-    "    [\n",
-    "        Resize((size, size)),\n",
-    "        ToTensor(),\n",
-    "        normalize\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "def train_transforms(examples):\n",
-    "    examples['pixel_values'] = [_train_transforms(image.convert(\"RGB\")) for image in examples['image']]\n",
+    "def apply_train_transforms(examples):\n",
+    "    examples['processed_images'] = [training_transforms(image.convert(\"RGB\")) for image in examples['image_path']]\n",
     "    return examples\n",
     "\n",
-    "def val_transforms(examples):\n",
-    "    examples['pixel_values'] = [_val_transforms(image.convert(\"RGB\")) for image in examples['image']]\n",
-    "    return examples"
+    "def apply_val_transforms(examples):\n",
+    "    examples['processed_images'] = [validation_transforms(image.convert(\"RGB\")) for image in examples['image_path']]\n",
+    "    return examples\n"
    ]
   },
   {
@@ -420,8 +294,8 @@
    },
    "outputs": [],
    "source": [
-    "train_data.set_transform(train_transforms)\n",
-    "test_data.set_transform(val_transforms)"
+    "training_dataset.set_transform(apply_train_transforms)\n",
+    "testing_dataset.set_transform(apply_val_transforms)"
    ]
   },
   {
@@ -438,66 +312,19 @@
    },
    "outputs": [],
    "source": [
-    "def collate_fn(examples):\n",
-    "    pixel_values = torch.stack([example[\"pixel_values\"] for example in examples])\n",
-    "    labels = torch.tensor([example['label'] for example in examples])\n",
-    "    return {\"pixel_values\": pixel_values, \"labels\": labels}"
+    "def batch_collator(batch):\n",
+    "    image_tensors = torch.stack([item[\"processed_images\"] for item in batch])\n",
+    "    label_tensors = torch.tensor([item['image_label'] for item in batch])\n",
+    "    return {\"processed_images\": image_tensors, \"labels\": label_tensors}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-17T16:08:32.044428Z",
-     "iopub.status.busy": "2024-04-17T16:08:32.044071Z",
-     "iopub.status.idle": "2024-04-17T16:08:52.908702Z",
-     "shell.execute_reply": "2024-04-17T16:08:52.907708Z",
-     "shell.execute_reply.started": "2024-04-17T16:08:32.044385Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b9d67b4dca34bba9f68ac4bf4c775d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/720 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "021e39a12df941c6836b196a0c22b316",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/343M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "85.800194\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "model = ViTForImageClassification.from_pretrained(model_str, num_labels=len(labels_list))\n",
-    "model.config.id2label = id2label\n",
-    "model.config.label2id = label2id\n",
-    "print(model.num_parameters(only_trainable=True) / 1e6)"
+    "vit_model = ViTForImageClassification.from_pretrained(model_directory, num_labels=len(label_categories))"
    ]
   },
   {
@@ -529,13 +356,13 @@
     }
    ],
    "source": [
-    "accuracy = evaluate.load(\"accuracy\")\n",
-    "def compute_metrics(eval_pred):\n",
-    "    predictions = eval_pred.predictions\n",
-    "    label_ids = eval_pred.label_ids\n",
-    "    predicted_labels = predictions.argmax(axis=1)\n",
-    "    acc_score = accuracy.compute(predictions=predicted_labels, references=label_ids)['accuracy']\n",
-    "    return {\"accuracy\": acc_score}"
+    "accuracy_metric = evaluate.load(\"accuracy\")\n",
+    "def compute_evaluation_metrics(eval_predictions):\n",
+    "    prediction_scores = eval_predictions.predictions\n",
+    "    true_labels = eval_predictions.label_ids\n",
+    "    predicted_labels = prediction_scores.argmax(axis=1)\n",
+    "    accuracy_result = accuracy_metric.compute(predictions=predicted_labels, references=true_labels)['accuracy']\n",
+    "    return {\"accuracy\": accuracy_result}"
    ]
   },
   {
@@ -552,25 +379,22 @@
    },
    "outputs": [],
    "source": [
-    "metric_name = \"accuracy\"\n",
-    "model_name = \"ai_vs_real_image_detection\"\n",
-    "num_train_epochs = 2\n",
-    "args = TrainingArguments(\n",
-    "    output_dir=model_name,\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=model_directory,\n",
     "    logging_dir='./logs',\n",
     "    evaluation_strategy=\"epoch\",\n",
     "    learning_rate=1e-6,\n",
     "    per_device_train_batch_size=64,\n",
     "    per_device_eval_batch_size=32,\n",
-    "    num_train_epochs=num_train_epochs,\n",
+    "    num_train_epochs=2,\n",
     "    weight_decay=0.02,\n",
     "    warmup_steps=50,\n",
-    "    remove_unused_columns=False,\n",
     "    save_strategy='epoch',\n",
     "    load_best_model_at_end=True,\n",
     "    save_total_limit=1,\n",
     "    report_to=\"none\"\n",
-    ")"
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -587,15 +411,15 @@
    },
    "outputs": [],
    "source": [
-    "trainer = Trainer(\n",
-    "    model,\n",
-    "    args,\n",
-    "    train_dataset=train_data,\n",
-    "    eval_dataset=test_data,\n",
-    "    data_collator=collate_fn,\n",
-    "    compute_metrics=compute_metrics,\n",
-    "    tokenizer=processor,\n",
-    ")"
+    "model_trainer = Trainer(\n",
+    "    model=vit_model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=training_dataset,\n",
+    "    eval_dataset=testing_dataset,\n",
+    "    data_collator=batch_collator,\n",
+    "    compute_metrics=compute_evaluation_metrics,\n",
+    "    tokenizer=image_processor,\n",
+    ")\n"
    ]
   },
   {
@@ -664,7 +488,7 @@
     }
    ],
    "source": [
-    "trainer.train()"
+    "model_trainer.train()"
    ]
   },
   {
@@ -707,7 +531,7 @@
     }
    ],
    "source": [
-    "trainer.evaluate()"
+    "model_trainer.evaluate()"
    ]
   },
   {
@@ -732,8 +556,8 @@
     }
    ],
    "source": [
-    "outputs = trainer.predict(test_data)\n",
-    "print(outputs.metrics)"
+    "test_outputs = model_trainer.predict(testing_dataset)\n",
+    "print(test_outputs.metrics)"
    ]
   },
   {
@@ -787,12 +611,12 @@
     }
    ],
    "source": [
-    "y_true = outputs.label_ids\n",
-    "y_pred = outputs.predictions.argmax(1)\n",
+    "import itertools\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, f1_score\n",
     "\n",
     "def plot_confusion_matrix(cm, classes, title='Confusion Matrix', cmap=plt.cm.Blues, figsize=(10, 8)):\n",
     "    plt.figure(figsize=figsize)\n",
-    "    \n",
     "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
     "    plt.title(title)\n",
     "    plt.colorbar()\n",
@@ -808,39 +632,25 @@
     "\n",
     "    plt.ylabel('True label')\n",
     "    plt.xlabel('Predicted label')\n",
-    "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
+    "# Assuming y_true and y_pred have been defined elsewhere in your script, like from the output of a model\n",
+    "y_true = test_outputs.label_ids\n",
+    "y_pred = test_outputs.predictions.argmax(1)\n",
     "\n",
     "accuracy = accuracy_score(y_true, y_pred)\n",
     "f1 = f1_score(y_true, y_pred, average='macro')\n",
     "\n",
     "print(f\"Accuracy: {accuracy:.4f}\")\n",
     "print(f\"F1 Score: {f1:.4f}\")\n",
-    "if len(labels_list) <= 150:\n",
+    "\n",
+    "if len(label_categories) <= 150:  # Using 'label_categories' which should have been defined earlier\n",
     "    cm = confusion_matrix(y_true, y_pred)\n",
-    "    plot_confusion_matrix(cm, labels_list, figsize=(8, 6))\n",
-    "print()\n",
-    "print(\"Classification report:\")\n",
-    "print()\n",
-    "print(classification_report(y_true, y_pred, target_names=labels_list, digits=4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-17T17:46:48.092796Z",
-     "iopub.status.busy": "2024-04-17T17:46:48.092490Z",
-     "iopub.status.idle": "2024-04-17T17:46:48.657777Z",
-     "shell.execute_reply": "2024-04-17T17:46:48.656990Z",
-     "shell.execute_reply.started": "2024-04-17T17:46:48.092770Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "trainer.save_model()"
+    "    plot_confusion_matrix(cm, label_categories, figsize=(8, 6))\n",
+    "\n",
+    "print(\"\\nClassification report:\\n\")\n",
+    "print(classification_report(y_true, y_pred, target_names=label_categories, digits=4))"
    ]
   }
  ],
